- Fix menu z-index (merci Dominique); - Sous-menu "Modifier les groupes".

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,6 +1,10 @@
 /* # -*- mode: css -*- 
-           ScoDoc, (c) Emmanuel Viennet 1998 - 2010
+           ScoDoc, (c) Emmanuel Viennet 1998 - 2014
  */
+
+.ui-menu {
+    z-index: 1000;
+}
 
 ul.nav {
     padding: 0px 0px 0px 0px;
